--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,52 +1,13 @@
 /* Empty. Add your own CSS if you like */
-body {
-    background: white;
-}
-
-* {
+html, body canvas{
+    margin: 0;
     padding: 0;
-    margin: 0;
-}
-
-.container {
-    margin: 0 auto;
-}
-
-
-.is-fullscreen #canvas-container {
-    width: 100%;
     height: 100%;
+    width; 100;
 }
 
-.is-fullscreen #canvas-container canvas {
-    margin: 0;
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.mobile .container {
-    padding: 0px;
-}
-
-canvas {
-    margin: 0;
-    max-width: 100%;
-}
-
-.mobile canvas {
-    margin: 0;
-}
-
-canvas:active {
-    cursor: pointer;
-    cursor: -webkit-grabbing;
-}
-
-#canvas-container {
-    margin: 0;
-}
-
-
-svg {
-    display: none;
+#main-canvas{
+  position: fixed;
+  top:0;
+  left:0;
 }
